Implements delete item from invoice, delete invoice, confirmation delete, save. Check changes in invioice.